src/objects/Subscription__c.object
<CustomObject>
    <description>Child object of Accounts to track a user&apos;s purchases : stores, SSLs, services, etc</description>
    <fields>
        <fullName>Account_Active_Store_Count__c</fullName>
        <description>Formula pulling the field value of Active Stores from the associated account record</description>
        <formula>Account__r.Active_Stores__c</formula>
        <inlineHelpText>Formula pulling the field value of Active Stores from the associated account record</inlineHelpText>
        <label>Active Stores on Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Formula pulling the field value of unique Ifrom the associated account record. Needed for sub reporting and vlookups</description>
        <formula>IF( Account__c &lt;&gt; NULL, Account__r.Account_Unique_ID__c, NULL)</formula>
        <inlineHelpText>Salesforce Account ID</inlineHelpText>
        <label>Account Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Activity_Date__c</fullName>
        <description>Formula pulling the field value of Last Activity Date from the associated account record. Needed for sub list view</description>
        <formula>Account__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Mismatch__c</fullName>
        <formula>IF(MBAAccountID__c &lt;&gt;  Account__r.MBAAccountID__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Formula pulling the field value of Name from the associated account record. Needed for sub list view</description>
        <formula>IF( NOT( ISBLANK(Account__c) ), Account__r.Name , IF( NOT( ISBLANK(Lead__c ) ), Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName, &quot;&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zAccount Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>Formula pulling the field value of Owner from the associated account record. Needed for sub list view</description>
        <formula>IF( Account__c &lt;&gt; NULL, Account__r.Owner.Full_Name__c , NULL )</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SS_Rep__c</fullName>
        <description>Formula pulling the field value of Success Squad Consultant from the associated account record.  Needed for sub list view</description>
        <formula>Account__r.Success_Squad_Consultant__c</formula>
        <label>zAccount SS Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>MBA User ID associated to subscription purchases</description>
        <inlineHelpText>Account associated with the subscription</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Campaign__c</fullName>
        <description>Formula pulling the Acquisition Campaign value from either the account or lead.  To be used in reporting and list views</description>
        <formula>IF (  ISBLANK(Account__c) = FALSE,  TEXT(Account__r.Acquisition_Campaign__c) ,  TEXT(Lead__r.Acquisition_Campaign__c ))</formula>
        <label>REPORT Acquisition Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdGroup__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Ad Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdKeywords__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Ad Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <description>Marketing field populated through the URL perimeter pass to SF from MBA</description>
        <label>zAffiliate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Formula calculating the numeric delta between today&apos;s date and the date the sub was created.  Used in reporting</description>
        <formula>TODAY () -   DATEVALUE(CreatedDate)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <description>SBD source for this store. aka Franchise in WHMCS</description>
        <inlineHelpText>SBD source for this store. aka Franchise in WHMCS</inlineHelpText>
        <label>SBD Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Source__c</fullName>
        <description>Used by the Success Squad to designate how this store was brought to them to work</description>
        <label>zAppointment Source</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Squad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>April_Revenue__c</fullName>
        <label>BA April Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>August_Revenue__c</fullName>
        <description>August month of revenue for subscription, only visible on admin page layout</description>
        <label>BA August Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BI_Date_Paid__c</fullName>
        <inlineHelpText>Date paid was received  - this information is added from our data warehourse</inlineHelpText>
        <label>zBI Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BI_Invoice_Status__c</fullName>
        <inlineHelpText>What is the status of the invoice?  Data comes from BI.</inlineHelpText>
        <label>zBI Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BI_Payment_Amount__c</fullName>
        <inlineHelpText>How much money we received from the client -  this information is added from our data warehourse</inlineHelpText>
        <label>zBI Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BI_This_Month_s_Revenue__c</fullName>
        <description>I only updated the first two if statements - MH</description>
        <formula>IF( 
((MONTH( BI_Date_Paid__c ) = MONTH(TODAY()) &amp;&amp; (YEAR( BI_Date_Paid__c ) = YEAR(TODAY()) ) 
&amp;&amp; (MONTH( X1st_Upgrade_Date__c ) = MONTH (TODAY()) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) ) 
&amp;&amp; (MONTH( Previous_Upgrade_Date__c ) = MONTH (TODAY()) &amp;&amp; YEAR( Previous_Upgrade_Date__c ) = YEAR (TODAY()) )) &amp;&amp; ISPICKVAL (BI_Invoice_Status__c, &quot;Paid&quot;)), 
BI_Payment_Amount__c , 

IF( 
((MONTH( BI_Date_Paid__c ) = MONTH(TODAY()) &amp;&amp; (YEAR( BI_Date_Paid__c ) = YEAR(TODAY()) ) 
&amp;&amp; (MONTH( X1st_Upgrade_Date__c ) = MONTH (TODAY()) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) )) &amp;&amp; 
ISPICKVAL (BI_Invoice_Status__c, &quot;Paid&quot;)), 
BI_Payment_Amount__c, 

IF( 
(MONTH( Previous_Upgrade_Date__c ) = MONTH(TODAY()) &amp;&amp; YEAR( Previous_Upgrade_Date__c ) = YEAR(TODAY()) ) 
&amp;&amp; (MONTH( X1st_Upgrade_Date__c ) = MONTH (TODAY()) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) ), 
Previous_Upgrade_Amount__c + X1st_Upgrade_Amount__c, 

IF( 
MONTH( X1st_Upgrade_Date__c ) = MONTH (TODAY()) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) 
, X1st_Upgrade_Amount__c , 

IF( 
MONTH( BI_Date_Paid__c ) = MONTH (TODAY()) &amp;&amp; YEAR( BI_Date_Paid__c ) = YEAR (TODAY()) , 
BI_Payment_Amount__c , 

IF( 
MONTH( Previous_Upgrade_Date__c ) = MONTH (TODAY()) &amp;&amp; YEAR( Previous_Upgrade_Date__c ) = YEAR (TODAY()) , Previous_Upgrade_Amount__c, 

IF( Strategic_Partner_Type__c = &quot;Reseller&quot; &amp;&amp; (MONTH(TODAY()) = MONTH( StartDate__c )&amp;&amp; ( YEAR( TODAY()) = YEAR( StartDate__c ) )) , SBD_Value__c , 
NULL) 
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zBI This Month&apos;s Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMP_Subscription_ID__c</fullName>
        <externalId>true</externalId>
        <label>BMP Subscription ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Phone_Number__c</fullName>
        <description>Formula pulling the field value from either the associated contact or lead to show if the sales rep has marked this client info as bad data. Used in reporting.</description>
        <formula>Lead__r.Bad_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAmount__c</fullName>
        <description>The amount charged per billing cycle.  Populated by MBA</description>
        <inlineHelpText>The amount charged per billing cycle.  Populated by MBA</inlineHelpText>
        <label>MBA Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCycle__c</fullName>
        <description>Designates whether the store is billed monthly or annually.  Populated by MBA</description>
        <inlineHelpText>Designates whether the store is billed monthly or annually.  Populated by MBA</inlineHelpText>
        <label>MBA Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biennially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial/Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calc_Prior_Month_Revenue__c</fullName>
        <description>Calculated Prior Month  Revenue</description>
        <formula>IF( 
(MONTH( PurchaseDate__c ) = ((MONTH(TODAY()) -1) -1) &amp;&amp; (YEAR( PurchaseDate__c ) = YEAR(TODAY()) ) 
&amp;&amp; (MONTH( X1st_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) ) 
&amp;&amp; (MONTH( Previous_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( Previous_Upgrade_Date__c ) = YEAR (TODAY()) )), 
MonthlyRecurringRevenue__c , 

IF( 
(MONTH( PurchaseDate__c ) = (MONTH(TODAY()) -1) &amp;&amp; (YEAR( PurchaseDate__c ) = YEAR(TODAY()) ) 
&amp;&amp; (MONTH( X1st_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) )), 
MonthlyRecurringRevenue__c, 

IF( 
(MONTH( Previous_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( Previous_Upgrade_Date__c ) = YEAR(TODAY()) ) 
&amp;&amp; (MONTH( X1st_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) ), 
Previous_Upgrade_Amount__c + X1st_Upgrade_Amount__c, 

IF( 
MONTH( X1st_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( X1st_Upgrade_Date__c ) = YEAR (TODAY()) 
, X1st_Upgrade_Amount__c , 

IF( 
MONTH( PurchaseDate__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( PurchaseDate__c ) = YEAR (TODAY()) , 
MonthlyRecurringRevenue__c , 

IF( 
MONTH( Previous_Upgrade_Date__c ) = (MONTH(TODAY()) -1) &amp;&amp; YEAR( Previous_Upgrade_Date__c ) = YEAR (TODAY()) , Previous_Upgrade_Amount__c, 

IF( Strategic_Partner_Type__c = &quot;Reseller&quot; &amp;&amp; ((MONTH(TODAY()) -1) = MONTH( StartDate__c )&amp;&amp; ( YEAR( TODAY()) = YEAR( StartDate__c ) )) , SBD_Value__c , 
NULL) 
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zCalc Prior Month Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <description>Populated by MBA when the sub&apos;s status value is moved to Cancelled or Terminated.  Not always sent from MBA as some manual processes cause MBA to fire differently than when the system makes the change</description>
        <inlineHelpText>Populated by MBA when the sub&apos;s status value is moved to Cancelled or Terminated.  Not always sent from MBA as some manual processes cause MBA to fire differently than when the system makes the change</inlineHelpText>
        <label>MBA Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancellationRequestCode__c</fullName>
        <description>Sent by MBA when the Billing team processes a cancellation request</description>
        <inlineHelpText>Sent by MBA when the Billing team processes a cancellation request</inlineHelpText>
        <label>MBA Cancellation Request Code</label>
        <picklist>
            <picklistValues>
                <fullName>Consolidating Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted Store Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misled by Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Took it Seriously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Too Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to Disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved Bugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory Customer Service Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancellationRequestDate__c</fullName>
        <description>Sent by MBA when the Billing team processes a cancellation request</description>
        <inlineHelpText>Sent by MBA when the Billing team processes a cancellation request</inlineHelpText>
        <label>MBA Cancellation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Engagement_Preference__c</fullName>
        <description>Formula pulling the Engagement Preference of the related channel partner (if that field is populated).  To be used in list views.
MAY BE ABLE TO DELETE - not sure if partner team uses anymore</description>
        <formula>TEXT(Channel_Partner__r.Engagement_Preference__c)</formula>
        <label>zChannel Partner Engagement Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_ID__c</fullName>
        <description>Formula pulling the channel partner&apos;s SF ID if that field is populated.  For dataloader updates</description>
        <formula>IF(ISBLANK( Channel_Partner__c )= FALSE, Channel_Partner__r.Account_Unique_ID__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zPAR Channel Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Rep__c</fullName>
        <description>Formula pulling account owner of the related channel partner</description>
        <formula>Channel_Partner__r.Owner.Full_Name__c</formula>
        <inlineHelpText>Formula pulling account owner of the related channel partner</inlineHelpText>
        <label>zPAR Channel Partner Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Start_Date__c</fullName>
        <description>Formula pulling account start date of the related channel partner</description>
        <formula>Channel_Partner__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula pulling account start date of the related channel partner</inlineHelpText>
        <label>zPAR Channel Partner Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Type__c</fullName>
        <description>Formula pulling account type of the related channel partner</description>
        <formula>IF( Channel_Partner__c &lt;&gt; NULL,TEXT(Channel_Partner__r.Type),NULL)</formula>
        <inlineHelpText>Formula pulling account type of the related channel partner</inlineHelpText>
        <label>z PAR Channel Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated via a trigger that fires if the MBA Partner ID is populated.  Finds the partner account with the matching value in its iDev Partner ID field and puts the account name here</description>
        <inlineHelpText>Partner Account (only matched is MBA Partner ID is populated and a corresponding iDev Parter ID exists on a partner account)</inlineHelpText>
        <label>PAR Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Subscriptions</relationshipLabel>
        <relationshipName>Client_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Date__c</fullName>
        <description>Used in an effort to match cancellation / churn dates in MBA and SF.  Manually populated during a project with Dan &amp; Ian but abandoned when MBA was updated to send the correct cancellation date based on end of billing cycle</description>
        <inlineHelpText>CAN PROBABLY BE DELETED but check with Dan</inlineHelpText>
        <label>zChurn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Churn_Type__c</fullName>
        <description>Used in an effort to match cancellation / churn dates in MBA and SF.  Manually populated during a project with Dan &amp; Ian but abandoned when MBA was updated to send the correct cancellation date based on end of billing cycle
CAN PROBABLY BE DELETED but check with Dan</description>
        <label>zChurn Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Terminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Revenue_Update_Date__c</fullName>
        <description>Miles used this field for a data project for Tara, and Joy doesn&apos;t know exactly what its purpose is</description>
        <label>zClient Revenue Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Revenue__c</fullName>
        <description>Miles used this field for a data project for Tara, and Joy doesn&apos;t know exactly what its purpose is</description>
        <label>zClient Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Was used by Acquisition when they used forecast subs to calculate future pipeline.  Think it can be deleted, but check with Jason</description>
        <inlineHelpText>Date the incoming trial is expected to convert to a paid store</inlineHelpText>
        <label>zClose Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultation_Completion_Date__c</fullName>
        <label>zConsultation Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consultation_Notes__c</fullName>
        <description>Note section specific to Success Squad</description>
        <label>zConsultation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultation_Stage__c</fullName>
        <description>Stage tracking for SSquad; some of the values are populated via workflow if an associated consultation record has a specific Outcome value</description>
        <label>zConsultation Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1st Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Held : Not Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultations Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intro Call Held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact associated with the subscription</description>
        <inlineHelpText>Contact associated with the subscription</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Code for the Subscription</description>
        <formula>IF( ISBLANK( Account__c ), Lead__r.Country, Account__r.BillingCountry  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Country Code for the Subscription</inlineHelpText>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Sent from MBA</description>
        <inlineHelpText>Sent from MBA</inlineHelpText>
        <label>MBA Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponCode__c</fullName>
        <description>Marketing field populated through the URL perimeter pass to SF from MBA</description>
        <label>zCoupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Formula needed to show specific time the sub was created to troubleshoot MBA syncing issues</description>
        <formula>CreatedDate</formula>
        <inlineHelpText>Formula needed to show specific time the sub was created to troubleshoot MBA syncing issues</inlineHelpText>
        <label>BA Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_of_Trial__c</fullName>
        <description>Formula calculating the amount of days between the trial&apos;s start date &amp; today</description>
        <formula>IF(AND(IsTrial__c == true, ExpirationDate__c &gt; Today(), Today() &gt; StartDate__c), TODAY() - StartDate__c, 
IF(StartDate__c = TODAY(), 0, NULL))</formula>
        <inlineHelpText>Formula calculating the amount of days between the trial&apos;s start date &amp; today</inlineHelpText>
        <label>Day of Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <description>Number of days between the start date and purchase date.</description>
        <formula>PurchaseDate__c - StartDate__c</formula>
        <inlineHelpText>Number of days between the start date and purchase date.</inlineHelpText>
        <label>REPORT Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Conversion__c</fullName>
        <description>Calculates how many days passed between the trial start and purchase dates</description>
        <formula>IF(ISBLANK( StartDate__c ) = FALSE &amp;&amp; ISBLANK(  PurchaseDate__c ) = FALSE, PurchaseDate__c - StartDate__c,NULL)</formula>
        <label>REPORT Days to Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Launch__c</fullName>
        <description>Calculates how many days from the purchase date it took to launch the store</description>
        <formula>Launch_Date__c - PurchaseDate__c</formula>
        <label>zDays to Launch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Revenue__c</fullName>
        <description>Dec revenue, only on admin layout</description>
        <label>BA December Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Design_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Old field used to track the design account data from Leads prior to the re-work project that merged duplicate leads.  Can probably be deleted</description>
        <label>zDesign Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Design Client Subscriptions</relationshipLabel>
        <relationshipName>Design_Client_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by a workflow but may not be great data since the sub has to be created in the proper order for it to fire.  Was the only way we could flag stores purchased directly vs trial upgrades, but hopefully the value can be pushed from MBA at some point</description>
        <inlineHelpText>Populated by a workflow but may not be great data since the sub has to be created in the proper order for it to fire. Was the only way we could flag stores purchased directly vs trial upgrades, but hopefully the value can be pushed from MBA at some poin</inlineHelpText>
        <label>Direct Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayAd__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT Display Ad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <description>Allows you to open the record in edit view in a new tab straight from the report page!</description>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/e&apos;,&apos;edit&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows you to open the record in edit view in a new tab straight from the report page!</inlineHelpText>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Populated by a workflow capturing the associated contact or lead email address each time the contact name is changed.  Also used in case workflows to send email notifications if no lead or contact is called out on the case</description>
        <inlineHelpText>Populated by a workflow capturing the associated contact or lead email address each time the contact name is changed. Also used in case workflows to send email notifications if no lead or contact is called out on the case</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_Plan__c</fullName>
        <description>Old Acquisition field that can probably be deleted.  Was used in forecasting</description>
        <label>Expected Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>